--- a/src/assets/css/themes/antd/components/input/mixin.less
+++ b/src/assets/css/themes/antd/components/input/mixin.less
@@ -18,7 +18,7 @@
 // input status
 // == when focus or actived
 .active(@color: @selected-color) {
-  border-color: @color;
+  border-color: @color !important;
   border-right-width: @border-width-base !important;
   outline: 0;
 }
