--- a/src/assets/css/views/desktop/_home.scss
+++ b/src/assets/css/views/desktop/_home.scss
@@ -3,18 +3,17 @@
   .feature-markets {
     margin: 16px auto;
     display: flex;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     li {
-      flex: 1 1;
-      height: 110px;
-      margin-right: 15px;
       position: relative;
-      background: $bg-card-color;
-      border: 1px solid $bg-card-color;
-      border-radius: 5px;
+      height: 115px;
+      width: 225px;
       padding: 18px;
-      -webkit-box-sizing: border-box;
-      box-sizing: border-box;
-      overflow: hidden;
+      background-color: #182640;
+      border: 1px solid #182640;
+      border-radius: 5px;
       cursor: pointer;
       .name {
         font-weight: normal;
@@ -256,7 +255,7 @@
           left: 0;
           position: absolute;
           right: 0;
-          bottom: 0;
+          bottom: 4px;
           height: 16px;
           text-align: center;
           transition: opacity 0.3s;
