--- a/src/assets/css/layouts/desktop/base.less
+++ b/src/assets/css/layouts/desktop/base.less
@@ -36,8 +36,9 @@ table {
 .ant-layout {
   min-height: 100vh;
   font-size: 12px;
-  color: #fff;
+  color: var(--text-default-color);
   background-color: var(--bg-color);
+
   &-content {
     .container {
       position: relative;
