--- a/src/assets/css/views/mobile/screen/_market-preview.scss
+++ b/src/assets/css/views/mobile/screen/_market-preview.scss
@@ -33,7 +33,7 @@
         position: relative;
         font-size: 14px;
         line-height: 35px;
-        background-color: $bg-head-color;
+        background-color: $bg-card-color;
 
         .chart-picker {
           position: relative;
@@ -78,7 +78,7 @@
       //margin-top: 16px;
       position: relative;
       .head-bar {
-        background-color: $bg-head-color;
+        background-color: $bg-card-color;
         height: 35px;
         position: relative;
         display: flex;
