--- a/src/assets/css/views/mobile/screen/_auth.scss
+++ b/src/assets/css/views/mobile/screen/_auth.scss
@@ -1,4 +1,10 @@
-.screen-auth {
+.screen-auth, .screen-verify {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background: var(--bg-card-color);
+
   &-box {
     margin: 0 20px;
   }
