--- a/src/assets/css/layouts/desktop/base.less
+++ b/src/assets/css/layouts/desktop/base.less
@@ -80,6 +80,12 @@ table {
 
     &-title {
       padding: 0;
+      display: flex;
+      > * {
+        margin-left: 12px;
+        font-weight: normal;
+        color: var(--text-default-color);
+      }
     }
 
     .ant-tabs-nav-container {
