--- a/src/assets/css/views/desktop/_home.scss
+++ b/src/assets/css/views/desktop/_home.scss
@@ -70,18 +70,15 @@
         }
       }
       .svg-box {
+        display: block;
         width: 100%;
         height: 50px;
         position: absolute;
-        left: -1px;
-        bottom: 0;
+        left: 0;
+        bottom: -1px;
         border-bottom-left-radius: 8px;
         border-bottom-right-radius: 8px;
         overflow: hidden;
-        svg {
-          stroke: #2d3b5f;
-          fill: rgba(#2d3b5f, 0.3);
-        }
       }
       &:last-child {
         margin: 0;
