--- a/src/assets/css/components/z-table.less
+++ b/src/assets/css/components/z-table.less
@@ -68,6 +68,12 @@
     &-selected {
       background-color: var(--selected-bg-color);
     }
+
+    span {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   &-no-scroll {
