--- a/src/assets/css/screens/search-markets.less
+++ b/src/assets/css/screens/search-markets.less
@@ -1,44 +1,47 @@
 .search-markets {
-  .head-bar {
-    background-color: var(--bg-card-color);
-    width: 100%;
-    position: relative;
-
-    i,
-    .cancel {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
+  .z-table {
+    &-row {
+      line-height: initial;
+      border-bottom: none !important;
     }
 
-    input {
-      width: 100%;
-      border: 0;
-      line-height: 40px;
-      padding: 0 70px 0 40px;
-      caret-color: var(--blue-color);
-      font-size: 14px;
-      color: var(--text-default-color);
+    .name {
+      flex: 1.3;
+      font-size: 13px;
+      margin: auto 0;
+    }
 
-      &::placeholder {
-        color: var(--input-placeholder-color);
+    .last {
+      flex: 1.3;
+
+      .price {
+        font-size: 12px;
+        display: block;
+
+        &-usd {
+          display: block;
+          font-size: 9px;
+          color: var(--color-gray);
+        }
       }
     }
-    .cancel {
-      font-size: 16px;
-      right: 12px;
+
+    .chance {
+      margin: auto 0;
+      > div {
+        padding: 0 8px;
+        border-radius: 2px;
+        text-align: center;
+        line-height: 25px;
+        font-size: 12px;
+        width: max-content;
+        margin-left: auto;
+      }
     }
-  }
 
-  .body-bar {
-    background-color: var(--bg-color);
-    position: relative;
-    height: 100%;
-  }
-
-  i {
-    color: var(--color-gray);
-    font-size: 18px;
-    left: 12px;
+    .favorite-action {
+      flex: 0.4;
+      margin: auto 0;
+    }
   }
 }
