fix kyc page, 404 page, balance page

--- a/src/assets/css/layouts/desktop/base.less
+++ b/src/assets/css/layouts/desktop/base.less
@@ -134,7 +134,7 @@ table {
   border-color: #1d3863;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
-  border: 1px solid #295e9f;
+  border: 1px solid var(--blue-dark-color);
   border-radius: 2px;
 }
 
