--- a/src/assets/css/layouts/desktop/account/_kyc.scss
+++ b/src/assets/css/layouts/desktop/account/_kyc.scss
@@ -103,6 +103,7 @@
       }
     }
     button {
+      position: relative;
       width: 600px;
       height: 50px;
       background: #2b93f6;
@@ -112,8 +113,10 @@
       outline: none;
       cursor: pointer;
       font-size: 16px;
+
       &:disabled {
         background: $footer-text-color;
+        cursor: not-allowed;
       }
     }
   }
