--- a/src/assets/css/layouts/desktop/custom/_modal.scss
+++ b/src/assets/css/layouts/desktop/custom/_modal.scss
@@ -8,6 +8,9 @@
     height: 100px;
     display: block;
     margin: 16px auto 45px;
+    
+    font-size: 100px;
+    color: var(--warning-color);
   }
   .title {
     color: white;
