--- a/src/assets/css/layouts/desktop/account/_kyc.scss
+++ b/src/assets/css/layouts/desktop/account/_kyc.scss
@@ -1,21 +1,42 @@
 .kyc .setting-body {
   margin-top: 12px;
+  .flex-form-row {
+    display: flex;
+
+    .form-row {
+
+    }
+
+    .form-row + .form-row {
+      margin-left: 12px;
+
+      .form-control {
+        width: 100%;
+      }
+
+      .form-label {
+        width: auto;
+        padding-right: 12px;
+      }
+    }
+  }
   .form-row {
     padding-bottom: 20px;
   }
   .form-label {
-    width: 104px;
+    width: 100px;
   }
   .form-control {
-    > input {
-      width: 600px;
+    width: calc(100% - 100px);
+
+    input {
+      width: 100%;
       height: 50px;
       border: 1px solid #405680;
       background-color: rgba(0, 0, 0, 0.15);
       border-radius: 4px;
       outline: none;
       padding: 0 10px;
-      -webkit-box-sizing: border-box;
       box-sizing: border-box;
       color: #fff;
       touch-action: manipulation;
@@ -92,11 +113,8 @@
           font-size: 12px;
           flex: 1 1;
           height: 140px;
-          display: -ms-flexbox;
           display: flex;
-          -ms-flex-direction: column;
           flex-direction: column;
-          -ms-flex-pack: center;
           justify-content: center;
           padding-left: 20px;
         }
