--- a/src/assets/css/layouts/desktop/_normal.scss
+++ b/src/assets/css/layouts/desktop/_normal.scss
@@ -144,6 +144,7 @@ dd {
 }
 
 .modal-exchange {
+  top: 0;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -166,25 +167,27 @@ dd {
 
 html {
   background: var(--bg-color);
-  ::-webkit-scrollbar {
-    width: 5px;
-    height: 10px;
-  }
-  ::-webkit-scrollbar-track-piece {
-    background-color: transparent;
-    border-radius: 6px;
-  }
 
-  ::-webkit-scrollbar-thumb:vertical {
-    height: 5px;
-    background-color: $bg-downdown-border-color;
-    border-radius: 6px;
-  }
+  * {
+    &::-webkit-scrollbar {
+      width: 5px;
+      height: 10px;
+    }
 
-  ::-webkit-scrollbar-thumb:horizontal {
-    width: 2px;
-    background-color: $bg-downdown-border-color;
-    border-radius: 6px;
+    &::-webkit-scrollbar-track-piece {
+      background-color: transparent;
+      border-radius: 6px;
+    }
+  
+    &::-webkit-scrollbar-track {
+      background-color: var(--bg-color);
+    }
+  
+    &::-webkit-scrollbar-thumb {
+      height: 5px;
+      background-color: var(--bg-downdown-border-color);
+      border-radius: 6px;
+    }
   }
 }
 
