Changed exchange layout

--- a/src/assets/css/screens/auth.less
+++ b/src/assets/css/screens/auth.less
@@ -40,7 +40,7 @@
 
   &-logo {
     height: 125px;
-    background-image: url("~@/assets/img/logo-1.png");
+    background-image: url("~@/assets/img/logo.png");
     background-repeat: no-repeat;
     background-size: 125px;
     background-position: center;
