--- a/src/assets/css/views/desktop/_exchange/import.scss
+++ b/src/assets/css/views/desktop/_exchange/import.scss
@@ -177,7 +177,7 @@
 
 .page-exchange-chart {
   margin-top: 4px;
-  height: calc(100% - #{ $mine-control-height});
+  height: calc(100% - 100px);
 
   &-item {
     position: absolute;
