--- a/src/assets/css/layouts/desktop/_footer.scss
+++ b/src/assets/css/layouts/desktop/_footer.scss
@@ -23,11 +23,12 @@
         display: flex;
         &.title {
           color: #fff;
-          padding-bottom: 22px;
           font-size: 16px;
           cursor: auto;
           img {
-            width: 150px;
+            margin-top: -60px;
+            width: 240px;
+            height: 240px;
           }
         }
         &.m {
