--- a/src/assets/css/layouts/desktop/header.less
+++ b/src/assets/css/layouts/desktop/header.less
@@ -17,7 +17,9 @@
     cursor: pointer;
 
     img {
-      height: 40px;
+      margin-top: 16px;
+      height: 160px;
+      width: 180px;
     }
   }
 
