Fixed minor issues

--- a/src/assets/css/layouts/desktop/header.less
+++ b/src/assets/css/layouts/desktop/header.less
@@ -17,9 +17,9 @@
     cursor: pointer;
 
     img {
-      margin-top: 16px;
-      height: 160px;
-      width: 180px;
+      margin-left: 32px;
+      height: 32px;
+      width: 32px;
     }
   }
 
