--- a/src/assets/css/components/z-table.less
+++ b/src/assets/css/components/z-table.less
@@ -34,14 +34,14 @@
     padding-left: 16px;
     padding-right: 16px;
     user-select: none;
-    > * {
+    span {
       flex: 1;
+    }
+
+    i {
+      line-height: inherit;
+      font-size: 16px;
       vertical-align: middle;
-      i {
-        line-height: inherit;
-        font-size: 16px;
-        vertical-align: middle;
-      }
     }
   }
 
