--- a/src/assets/css/views/desktop/_home.scss
+++ b/src/assets/css/views/desktop/_home.scss
@@ -154,6 +154,8 @@
           height: 43px;
           padding: 0 25px 0 10px;
           border-bottom: 1px solid var(--border-color);
+          color: var(--text-default-color);
+
           &:hover {
             background-color: rgba(0, 0, 0, 0.15);
             transition: background-color 0.35s;
