--- a/src/assets/css/layouts/desktop/index.scss
+++ b/src/assets/css/layouts/desktop/index.scss
@@ -1,5 +1,6 @@
 @import "_custom.scss";
 @import "_footer.scss";
+@import "desclaimer.scss";
 @import "_iviewui.scss";
 @import "_normal.scss";
 @import "account/index.scss";
