--- a/public/charting_library/custom.css
+++ b/public/charting_library/custom.css
@@ -6,7 +6,7 @@
 }
 
 .loading-indicator {
-	background-color: #0e182b;
+	background-color: #1a243b;
 }
 
 .chart-page [class^="labelRow-"], .chart-page [class^="icon-"] {
@@ -43,6 +43,14 @@
 	.item-2xPVYue0:hover, .item-2xPVYue0.isActive-2j-GhQs_:hover {
 		background-color: #2e3f5f;
 	}
+}
+
+.container-2BvS3Fpg .inner-3YzQuyJx {
+	background-color: #1a243b;
+}
+
+.chart-page .apply-common-tooltip {
+	border: none;
 }
 
 body {
