--- a/src/assets/css/themes/mobile/index.less
+++ b/src/assets/css/themes/mobile/index.less
@@ -9,8 +9,13 @@
     font-size: 10px;
 
     > * {
+      &:first-child {
+        margin-bottom: 50px;
+      }
+    }
+
+    .body-bar {
       overflow-y: auto;
-      scrollbar-width: none;
 
       &::-webkit-scrollbar {
         width: 0;
@@ -20,10 +25,6 @@
 
       &::-webkit-scrollbar-thumb {
         background: transparent;
-      }
-
-      &:first-child {
-        margin-bottom: 50px;
       }
     }
   }
