Add support high performance orderbook table

--- a/src/assets/css/layouts/desktop/base.less
+++ b/src/assets/css/layouts/desktop/base.less
@@ -34,6 +34,7 @@ table {
 .ant-layout {
   min-height: 100vh;
   font-size: 12px;
+  font-weight: 500;
   color: var(--text-default-color);
   background-color: var(--bg-color);
 
