--- a/src/assets/css/views/desktop/_exchange/import.scss
+++ b/src/assets/css/views/desktop/_exchange/import.scss
@@ -192,10 +192,10 @@
     width: 100%;
     height: 100%;
     background-color: var(--bg-card-color);
-    z-index: 0;
+    display: none;
 
     &-selected {
-      z-index: 1;
+      display: block;
     }
   }
 }
