Add support referral, fix feature markets in mobile

--- a/src/assets/css/components/z-table.less
+++ b/src/assets/css/components/z-table.less
@@ -57,7 +57,7 @@
       cursor: pointer;
 
       &:hover {
-        background-color: @item-hover-bg;
+        background-color: rgba(0, 0, 0, 0.15);
       }
     }
   }
