--- a/src/assets/css/layouts/desktop/_normal.scss
+++ b/src/assets/css/layouts/desktop/_normal.scss
@@ -82,6 +82,9 @@ button {
 .bg-up {
   background-color: var(--up-color) !important;
 }
+.bg-warn {
+  background-color: var(--warning-color) !important;
+}
 
 .color-loading {
   color: var(--blue-color) !important;
